--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
       <script src="p5.play.js"></script>
 
       <script src="sketch.js"></script>
-      
-      <script src="tree.js"></script>
+<script src="tree.js"></script>
+<script src="mangoes.js"></script> 
+<script src="boy.js"></script>
+
+
     </head>
     <body>
     </body>
